--- a/LiveDashboard.Web.csproj
+++ b/LiveDashboard.Web.csproj
@@ -184,9 +184,9 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
-    <Compile Include="Chatroom.cs" />
+    <Compile Include="Connections\Chatroom.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RandomValue.cs" />
+    <Compile Include="Connections\RandomValue.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\themes\base\images\ui-bg_flat_0_aaaaaa_40x100.png" />
@@ -309,6 +309,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Hubs\" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="packages.config" />
