--- a/LiveDashboard.Web.csproj
+++ b/LiveDashboard.Web.csproj
@@ -266,6 +266,7 @@
     <Content Include="Scripts\knockout-2.2.1.js" />
     <Content Include="Scripts\modernizr-2.5.3.js" />
     <Content Include="Scripts\raphael.2.1.0.min.js" />
+    <Content Include="Style\dashboard.css" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
